# AVSoftTestTask

./: README.md  pyproject.toml  research.ipynb
